Bug 908701 - DeviceStorage: Cleanup apps directory determination r=dhylands